# rules_mdbook

./: README.md
.github/workflows/: ci.yml
docs/: BUILD.bazel  defs.md  extensions.md  toolchains.md  update.sh
examples/smoke/: BUILD.bazel  book.toml
examples/smoke/src/: SUMMARY.md  intro.md  mermaid.md
mdbook/: BUILD.bazel  defs.bzl  extensions.bzl  toolchains.bzl
mdbook/private/: BUILD.bazel  known_versions.bzl
