load("@bazel_skylib//:bzl_library.bzl", "bzl_library")

package(default_visibility = ["//visibility:public"])

exports_files([
    "defs.bzl",
    "extensions.bzl",
])

bzl_library(
    name = "defs_bzl",
    srcs = ["defs.bzl"],
    visibility = ["//docs:__pkg__"],
)

bzl_library(
    name = "extensions_bzl",
    srcs = ["extensions.bzl"],
    visibility = ["//docs:__pkg__"],
    deps = ["//mdbook/private:known_versions_bzl"],
)
